[gd_scene load_steps=6 format=3 uid="uid://btfhlp8g2m4ll"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_p6xsj"]
[ext_resource type="PackedScene" uid="uid://vgxokvv4j5r5" path="res://Scene/player_1.tscn" id="1_wjuf8"]
[ext_resource type="PackedScene" uid="uid://csn42aq3me2sv" path="res://Scene/player_2.tscn" id="2_r0kc1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gc4c6"]
size = Vector2(20, 654)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svv4e"]
size = Vector2(1163, 20)

[node name="world" type="Node2D"]
script = ExtResource("1_p6xsj")

[node name="player1" parent="." instance=ExtResource("1_wjuf8")]
position = Vector2(85, 147)

[node name="walls" type="Node2D" parent="."]

[node name="wall" type="StaticBody2D" parent="walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/wall"]
position = Vector2(0, 317)
shape = SubResource("RectangleShape2D_gc4c6")

[node name="wall2" type="StaticBody2D" parent="walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/wall2"]
position = Vector2(1144, 319)
shape = SubResource("RectangleShape2D_gc4c6")

[node name="wall3" type="StaticBody2D" parent="walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/wall3"]
position = Vector2(571.5, -9)
shape = SubResource("RectangleShape2D_svv4e")

[node name="wall4" type="StaticBody2D" parent="walls/wall3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/wall3/wall4"]
position = Vector2(572, 647)
shape = SubResource("RectangleShape2D_svv4e")

[node name="player2" parent="." instance=ExtResource("2_r0kc1")]
position = Vector2(975, 106)

[node name="scores" type="Node2D" parent="."]

[node name="p1_score" type="Label" parent="scores"]
offset_left = 28.0
offset_right = 69.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 30
text = "P1:0"

[node name="p2_score" type="Label" parent="scores"]
offset_left = 1056.0
offset_top = 10.0
offset_right = 1117.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 30
text = "P2:0"

[node name="game_over" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="game_over"]
layout_mode = 0
offset_right = 1136.0
offset_bottom = 638.0
color = Color(0.0470588, 0.0470588, 0.0470588, 0.494118)

[node name="win_text" type="Label" parent="game_over"]
layout_mode = 0
offset_left = 378.0
offset_top = 206.0
offset_right = 779.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 50
text = "Player 1 Menang"

[node name="restart" type="Button" parent="game_over"]
layout_mode = 0
offset_left = 496.0
offset_top = 292.0
offset_right = 678.0
offset_bottom = 349.0
theme_override_font_sizes/font_size = 35
text = "Play Again"

[connection signal="pressed" from="game_over/restart" to="." method="_on_restart_pressed"]
